--- a/src/styles/agenda.module.css
+++ b/src/styles/agenda.module.css
@@ -63,6 +63,7 @@
   height: 42px;
   border: solid;
   border-color: rgb(128, 0, 0);
+  background-color:rgb(182, 50, 50) ;
   border-radius: 10px;
   cursor: pointer;
   font-size: 16px;
