--- a/src/styles/perfil.module.css
+++ b/src/styles/perfil.module.css
@@ -3,13 +3,13 @@
   color: white;
   font-family: Arial, sans-serif;
   text-align: center;
-  height: 94vh;
+  padding: 20px;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
- padding-bottom: 55px;
- 
+  padding-bottom: 55px;
 }
 
 .profileHeader {
@@ -29,7 +29,6 @@
   background-size: cover;
   background-repeat: no-repeat;
   display: inline-block;
- 
 }
 
 .changePhoto {
@@ -39,11 +38,11 @@
   width: 85px;
   justify-content: center;
   align-items: center;
-   margin-top: 1.1rem;
+  margin-top: 1.1rem;
 }
 
 .form {
-  width: 328px;
+  width: 300px;
   padding: 16px;
   align-items: center;
   gap: 8px;
@@ -59,10 +58,8 @@
   font-size: 1.7em;
   height: 24px;
   color: #c4c4cc;
-  font-family: "Poppins",sans-serif;
+  font-family: "Poppins", sans-serif;
   background-color: rgb(35, 34, 34);
- 
-
 }
 
 .numericContainer {
@@ -71,6 +68,7 @@
   margin-top: 20px;
   width: 100%;
   max-width: 400px;
+  padding-left: 10px;
 }
 
 .numericBox {
@@ -80,6 +78,8 @@
   width: 25%;
   text-align: center;
   display: flex;
+  flex-direction: column;
+  align-items: center;
   
 }
 
@@ -91,22 +91,36 @@
   text-align: center;
   width: 100%;
 }
-.label{
-    font-size: 1.2em;
-    padding-top: 5px;
+
+.label {
+  font-size: 1.2em;
+  padding-top: 5px;
 }
-.buttonLogOut {
+
+.dobleButton {
   display: flex;
-  width: 328px;
+  gap: 10px;
+  margin-left: 5px;
+}
+
+.buttonLogOut, .buttonSave {
+  display: flex;
+  width: 250px;
   padding: 16px 24px;
   justify-content: center;
   align-items: center;
   gap: 10px;
-  border-radius: 6px;
+  border-radius: 15px;
   background: #29e33c;
   margin-top: 35px;
+  font-size: 2em;
+  color: white;
 }
 
 .buttonLogOut:active {
   background-color: #3e8e41;
+}
+
+.buttonLogOut svg {
+  margin-left: 8px;
 }
