--- a/src/styles/login.module.css
+++ b/src/styles/login.module.css
@@ -1,125 +1,119 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+
 .container {
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-    background: linear-gradient(
-      to bottom,
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: linear-gradient(to bottom,
       rgba(28, 28, 30, 0) 0%,
-      rgba(28, 28, 30, 0.8) 50%,
-      #000000 100%
-    ), 
+      rgba(28, 28, 30, 0.8) 60%,
+      #000000 80%),
     url("/assets/background-image.png");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-  }
-  
-  .content {
-    width: 80%;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: transparent;
-    border-radius: 10px;
-    margin-top: 158px;
-  }
-  
-  .logoContainer {
-    display: flex;
-    align-items: center;
-    padding-top: 100px;
-    width: 270px;
-    height: 40px;
-    margin-right: 10px;
-  }
-  
-  .form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .label {
-    margin-bottom: 10px;
-  }
-  
-  .input {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 20px;
-    border: none;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  }
-  
-  .button {
-    width: 100%;
-    padding: 10px;
-    background: #29e33c;
-    color: #fff;
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
-  }
-  
-  .button2 {
-    width: 270px;
-    padding: 10px;
-    background: #29e33c;
-    color: #fff;
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
-  }
-  
-  .button:hover {
-    background-color: #3e8e41;
-  }
-  
-  .button2:hover {
-    background-color: #3e8e41;
-  }
-  
-  .footer {
-    margin-top: 20px;
-    text-align: center;
-    color: white;
-    margin-top: 50px;
-  }
-  
-  .blackBackground {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 222px;
-    background: linear-gradient(to top, #000000, #252424);
-    z-index: -1;
-  }
-  
-  .subTitle {
-    color: var(--Platform-Aliases-Ttulos, #e1e1e6);
-    text-align: center;
-    font-family: Poppins;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 160%; /* 32px */
-    width: 348px;
-  }
-  
-  .input:focus {
-    outline: 2px solid #4caf50; /* Adapte a cor conforme necessário */
-    outline-offset: 2px;
-  }
-  
-  .createAccountButton {
-    background-color: #2196f3; /* Adapte a cor conforme necessário */
-  }
-  
-  .createAccountButton:hover {
-    background-color: #0b7dda; /* Adapte a cor conforme necessário */
-  }
-  
+  background-size: 100% 75%;
+  background-repeat: no-repeat;
+  font-family: "Poppins", sans-serif;
+}
+
+.blackBackground {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(to top, #000000, #252424);
+  z-index: -1;
+}
+
+.content {
+  background-color: transparent;
+  margin-top: 15.8rem;
+}
+
+.logoContainer {
+  display: flex;
+  align-items: center;
+  margin-top: 12.6rem;
+  width: 270px;
+  height: 40px;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+}
+
+.subTitle {
+  color: #FFF;
+  text-align: center;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+}
+
+.label {
+  margin-bottom: 10px;
+}
+
+.input {
+  display: flex;
+  gap: 8rem;
+  width: 30.8rem;
+  height: 2.4rem;
+  padding: 1.6rem;
+  border: none;
+  font-family: "Poppins", sans-serif;
+  font-size: 1.5rem;
+  border-radius: 0.6rem;
+  background-color: var(--card-color);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.button {
+  width: 100%;
+  height: 5.6rem;
+  padding: 1.6rem;
+  margin-top: 2.2rem;
+  background: var(--primary-color);
+  color: #000;
+  border: none;
+  border-radius: 0.6rem;
+  cursor: pointer;
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  font-size: 1.6rem;
+}
+
+.footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+}
+
+.footer p{
+  margin-top: 11.2rem;
+  color: #FFF;
+  font-family: "Poppins", sans-serif;
+  font-size: 1.6rem;
+}
+
+.buttonCreate {
+  width: 34.8rem;
+  height: 5.6rem;
+  padding: 1.6rem;
+  margin-top: 2.2rem;
+  background: transparent;
+  color: var(--primary-color);
+  border: 1px solid var(--primary-color);
+  border-radius: 0.6rem;
+  cursor: pointer;
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  font-size: 1.6rem;
+}
+
