--- a/src/styles/agenda.module.css
+++ b/src/styles/agenda.module.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+
 .container {
   width: 100%;
   height: 100%;
@@ -8,14 +10,9 @@
   gap: 2rem;
   font-family: "Poppins", sans-serif;
   background-color: black;
-  padding-bottom: 110px;
+  padding-bottom: 7rem;
 }
 
-.containerButtons {
-  display: flex;
-  gap: 20px;
-  margin-bottom: 40px;
-}
 .profileHeader {
   font-size: 3em;
   margin-top: 6.3rem;
@@ -23,15 +20,23 @@
   font-family: "Poppins", sans-serif;
   font-size: 25px;
   font-style: normal;
-  line-height: 111.5%; /* 27.875px */
+  line-height: 111.5%;
+  /* 27.875px */
   margin-bottom: 20px
 }
 
+.containerButtons {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 40px;
+}
+
 .notPressedButton {
-  height: 40px;
+  height: 7.6rem;
+  min-width: 3.3rem;
   color: #fff;
   background-color: #29292e;
-  font-weight: bold;
+  font-weight: 600;
   border: none;
   border-radius: 20px;
   cursor: pointer;
@@ -40,11 +45,13 @@
   gap: 10px;
   padding: 1rem;
 }
+
 .button {
-  height: 40px;
+  height: 7.6rem;
+  min-width: 3.3rem;
   background-color: #29e33c;
   color: #000000;
-  font-weight: bold;
+  font-weight: 600;
   border: none;
   border-radius: 20px;
   cursor: pointer;
@@ -53,21 +60,23 @@
   gap: 10px;
   padding: 1rem;
 }
+
 .booked {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: white;
+  color: #C4C4CC;
   background-color: #29292e;
   width: 324px;
   height: 42px;
   border: solid;
-  border-color: rgb(128, 0, 0);
-  background-color:rgb(182, 50, 50) ;
+  border-color: #381c1c;
+  background-color: #381c1c;
   border-radius: 10px;
   cursor: pointer;
   font-size: 16px;
 }
+
 .horas {
   background-color: #29292e;
   color: white;
@@ -82,9 +91,11 @@
   justify-content: center;
   align-items: center;
 }
+
 .fatherContainer {
   display: flex;
 }
+
 .containerPlusConfirmed {
   display: flex;
   justify-content: space-between;
@@ -95,10 +106,9 @@
   height: 42px;
   border: solid;
   border-color: #29e33c;
-  border-radius: 10px;
+  border-radius: 8px;
   cursor: pointer;
   font-size: 16px;
-
 }
 
 .confirm {
@@ -107,11 +117,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 80px;
+  width: 100px;
   height: 100%;
   border: none;
+  border-radius: 6px;
   font-family: "Poppins", sans-serif;
-  font-weight: 500;
+  font-weight: 600;
 }
 
 .aulaMarcada {
@@ -126,50 +137,52 @@
   border-radius: 14px;
   background: #29292e;
 }
+
 .inforConfirmation {
   color: var(--Neutral-Colors-White, var(--Primaty-color, #fff));
   text-align: center;
-  font-family: "Roboto";
+  font-family: "Poppins", sans-serif;
   font-size: 16px;
   font-style: normal;
   font-weight: 700;
-  line-height: 160%; /* 25.6px */
+  line-height: 160%;
+  /* 25.6px */
 }
 
 .buttonGroup {
   display: flex;
+  align-items: center;
+  background-color: #29292e;
+  border-radius: 4px;
+  width: 331px;
+  height: 30px;
+  padding: 0 2px;
 }
 
 .buttonBox {
   background-color: #29292e;
   color: white;
   border: none;
-  height: 30px;
-  width: 150px;
+  height: 26px;
+  width: 163px;
   font-size: 16px;
   cursor: pointer;
   border-radius: 5px;
   transition: background-color 0.3s ease;
-  margin-right: 10px; /* Adicionando um espaço entre os botões */
-  flex-grow: 1; /* Os botões ocuparão todo o espaço disponível */
-  max-width: calc(
-    50% - 5px
-  ); /* Cada botão ocupará metade do espaço disponível */
+  flex-grow: 1;
+  /* Os botões ocuparão todo o espaço disponível */
+  max-width: calc(50%);
+  /* Cada botão ocupará metade do espaço disponível */
   font-family: "Poppins", sans-serif;
 }
 
 .buttonBox:last-child {
-  margin-right: 0; /* Removendo a margem direita do último botão */
+  margin-right: 0;
+  /* Removendo a margem direita do último botão */
 }
 
 /* Mudando as cores quando um botão estiver ativo */
 .buttonBox.active {
   background-color: #29e33c;
   color: black;
-}
-
-.buttonGroup {
-  align-items: center;
-  display: flex;
-  
 }
