--- a/src/styles/perfil.module.css
+++ b/src/styles/perfil.module.css
@@ -1,19 +1,18 @@
 .profileContainer {
+  height: 100vh;
   background-color: black;
   color: white;
-  font-family: Arial, sans-serif;
-  text-align: center;
-  padding: 20px;
-  height: 92vh;
+  font-family: "Poppins", sans-serif;
   display: flex;
+  text-align: center;
   flex-direction: column;
-  justify-content: space-evenly;
   align-items: center;
-  padding-bottom: 47px;
 }
 
 .profileHeader {
-  font-size: 3em;
+  font-family: "Poppins", sans-serif;
+  font-size: 2.5rem;
+  font-weight: 600;
   margin-bottom: 20px;
   margin-top: 6.3rem;
 }
@@ -35,10 +34,11 @@
   color: #29e33c;
   cursor: pointer;
   font-size: 1.5em;
-  width: 85px;
+  width: 9rem;
   justify-content: center;
   align-items: center;
   margin-top: 1.1rem;
+  font-weight: 600;
 }
 
 .form {
@@ -51,28 +51,28 @@
 
 .formInput {
   width: 100%;
-  padding: 12px;
+  padding: 16px;
   margin: 10px 0;
   border: none;
-  border-radius: 5px;
+  border-radius: 6px;
   font-size: 1.7em;
   height: 24px;
   color: #c4c4cc;
   font-family: "Poppins", sans-serif;
-  background-color: rgb(35, 34, 34);
+  background-color: var(--card-color);
 }
 
 .numericContainer {
   display: flex;
-  justify-content: space-around;
-  margin-top: 20px;
+  justify-content: space-between;
+  margin-top: 1rem;
   width: 100%;
   max-width: 400px;
   padding-left: 10px;
 }
 
 .numericBox {
-  background-color: #333;
+  background-color: var(--card-color);
   padding: 10px;
   border-radius: 5px;
   width: 25%;
@@ -80,10 +80,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  
+  font-family: "Poppins", sans-serif;
 }
 
 .numericInput {
+  font-family: "Poppins", sans-serif;
   background: none;
   border: none;
   color: #C4C4CC;
@@ -99,22 +100,46 @@
 
 .dobleButton {
   display: flex;
-  gap: 10px;
-  margin-left: 5px;
-}
-
-.buttonLogOut, .buttonSave {
-  display: flex;
-  width: 250px;
-  padding: 16px 24px;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 10px;
-  border-radius: 15px;
-  background: #29e33c;
-  margin-top: 35px;
-  font-size: 2em;
-  color: white;
+  margin-left: 2rem;
+}
+
+.buttonSave {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 4.6rem;
+  padding: 1.6rem;
+  margin-top: 2.2rem;
+  background: var(--primary-color);
+  color: #000;
+  border: none;
+  border-radius: 0.6rem;
+  cursor: pointer;
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  font-size: 1.6rem;
+}
+
+.buttonLogOut{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 4.6rem;
+  padding: 1.6rem;
+  margin-top: 1.5rem;
+  background: transparent;
+  color: var(--primary-color);
+  border: 1px solid var(--primary-color);
+  border-radius: 0.6rem;
+  cursor: pointer;
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  font-size: 1.6rem;
 }
 
 .buttonLogOut:active {
