--- a/src/styles/CardAgendamento.module.css
+++ b/src/styles/CardAgendamento.module.css
@@ -1,24 +1,36 @@
 .appointmentsContainer {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 1.5rem;
+    padding: 2.5rem;
+    background-color: black; /* Light gray background */
+    border-radius: 12px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+   
 }
 
 .appointmentCard {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem;
-    background: #29292E;
-    border-radius: 8px;
-    color: #FFF;
-    font-family: "Poppins", sans-serif;
+    padding: 1.5rem;
+    background: #29292E; /* White background for cards */
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: transform 0.2s, box-shadow 0.2s;
+    font-family: "Roboto", sans-serif; /* Changed font to Roboto */
+    color: #333; /* Darker text color */
+}
+
+.appointmentCard:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
 }
 
 .date {
-    font-size: 1.5rem;
+    font-size: 1.25rem;
     font-weight: bold;
-    color: #FFF;
+    color: #007bff; /* Blue color for the date */
 }
 
 .info {
@@ -26,12 +38,19 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding-left: 1rem;
+    padding-left: 1.5rem;
+    color: #ffffff; 
+    font-size: 1.5rem;
 }
 
 .cancelButton {
     background: none;
     border: none;
     cursor: pointer;
-    color: #FF5A5F; /* Red color for the cancel icon */
+    color: #dc3545; /* Red color for the cancel icon */
+    transition: color 0.2s;
+}
+
+.cancelButton:hover {
+    color: #c82333; /* Darker red on hover */
 }
