--- a/src/styles/CardAgendamento.module.css
+++ b/src/styles/CardAgendamento.module.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+
 .appointmentsContainer {
     display: flex;
     flex-direction: column;
@@ -6,7 +8,6 @@
     background-color: black; /* Light gray background */
     border-radius: 12px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-   
 }
 
 .appointmentCard {
@@ -22,11 +23,6 @@
     color: #333; /* Darker text color */
 }
 
-.appointmentCard:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
-}
-
 .date {
     font-size: 1.25rem;
     font-weight: bold;
@@ -36,17 +32,20 @@
 .info {
     flex-grow: 1;
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding-left: 1.5rem;
+    gap: 3rem;
+    justify-content: flex-start;
+    align-items: center;
     color: #ffffff; 
     font-size: 1.5rem;
+    font-family: "Poppins", sans-serif;
 }
+
 
 .cancelButton {
     background: none;
     border: none;
     cursor: pointer;
+    padding-right: 0.5rem;
     color: #dc3545; /* Red color for the cancel icon */
     transition: color 0.2s;
 }
